# cli-game

./: .gitignore  README.md  pyproject.toml  setup.py
src/cli_game/: __init__.py  _version.py  game.py
src/cli_sliding_puzzle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
